--- a/index.html
+++ b/index.html
@@ -33,13 +33,46 @@
 
 <p>We'll do our best to group the tools on our <a href="https://github.com/AsteriskLabs">GitHub</a> into some semblance of organisation, but, a lot of the time it doesn't work like that.</p>
 
-<h3><a name="front-of-stack" class="anchor" href="#front-of-stack"><span class="octicon octicon-link"></span></a>Front of Stack.</h3>
+<h3><a name="front-of-stack" class="anchor" href="#front-of-stack"><span class="octicon octicon-link"></span></a>Front of Stack. (Or, things to do before you start building.. and eventually breaking)</h3>
 
 <p>First off the rank is our tools that are meant to make the life of an (application) security designer or architect just that little bit easier. To begin with we present:</p>
 
 <h4>SAMM Self Assessment</h4>
 
-<p>The <a href="https://github.com/AsteriskLabs/ssa">SAMM Self Assessment</a> web application is a simplified checklist app that's meant to help simplify the collection of a light-weight <a href="http://www.opensamm.org">OpenSAMM</a> assessment. 
+<p>The <a href="https://github.com/AsteriskLabs/ssa">SAMM Self Assessment</a> web application is a simplified checklist app that's meant to help simplify the collection of information for a light-weight <a href="http://www.opensamm.org">OpenSAMM</a> assessment. The OWASP Project has been exceptionally useful in a number of engagements we've had, and the ability for people to quickly gauge their status, particularly against documented target states, can be tremendously useful.</p>
+
+<p>Status: Beta - but .. not too far to go. You can see our current list of <a href="https://github.com/AsteriskLabs/ssa/issues">issues</a> to keep track</p>
+
+<h4>Simple Strides</h4>
+
+<p><a href="https://github.com/AsteriskLabs/simplestrides">Simple Strides</a> is a jQuery-based threat modelling utility. This one came from the difficulties of trying to run up Microsoft's Threat Modeling tool in a) a non-Windows environment, and b) without access to Visio. We thought to ourselves, why doesn't this thing just run in a browser.</p>
+
+<p>Status: Beta - a little bit further away than the SAMM Self Assessment. You can see our current list of <a href="https://github.com/AsteriskLabs/simplestrides/issues">issues</a> here</p>
+
+<h3><a name="back-of-stack" class="anchor" href="#back-of-stack"><span class="octicon octicon-link"></span></a>Back of Stack. (Things for developers .. )</h3>
+
+<p>These are libraries, tools, or *other* things that are explicitly for assisting with developers and adding or improving security within their platforms</p>
+
+<h4>Devise Google Authenticator</h4>
+
+<p>Since Google released the Authenticator application we really thought there weren't any more valid excuses not to have 2nd factor authentication (2FA) in your apps. If you've done any work in Rails you've likely come across <a href="https://github.com/plataformatec/devise">Devise</a>, one of the more popular authentication solutions for Rails applications. The <a href="https://github.com/AsteriskLabs/devise_google_authenticator">Devise Google Authenticator</a> gem extends on Devise to allow your user authentication framework to leverage the Google Authenticator for 2FA.</p>
+
+<p><a href="http://labs.asteriskinfosec.com.au/tag/devise_google_authenticator/">Blog entries here</a></p>
+
+<p>Status: In-use .. (over 5,100 downloads from <a href="https://rubygems.org/gems/devise_google_authenticator">rubygems</a>)</p>
+
+<h3><a name="topple-the-stack" class="anchor" href="#topple-the-stack"><span class="octicon octicon-link"></span></a>Topple the Stack. (Things for breaking .. )</h3>
+
+<p>These are the tools or scripts or whatever we scrounge together to help us break things better.</p>
+
+<h4>Prenus (The Pretty Nessus Thing)</h4>
+
+<p>Sure, it's not really going to help you break a web application, or help you find those more esoteric business-logic flaws, but, to try and pretend that Nessus doesn't have a place in your defence (offence) library is just silly. We use Nessus a bit, and, when you've been scanning TONNES of hosts, getting to the juicy parts of that information can be quite difficult. <a href="https://github.com/AsteriskLabs/prenus">Prenus</a> is meant to help by chewing up Nessus extract files, and allowing you to output pretty formatted HTML files with graphs, or XLS files, or even output to then be consumed by <a href="http://afterglow.sourceforge.net/">Afterglow</a> or <a href="http://circos.ca/">Circos</a>. Whatever.</p>
+
+<p><a href="http://labs.asteriskinfosec.com.au/tag/prenus/">Blog entries here</a></p>
+
+<p>Status: We use it sure.</p>
+
 
       </section>
     </div>
