--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
       </section>
     </div>
 
-    <footer> 
+    <footer>
       <div class="container">
         <h1>Contact and other junk</h1>
         <p>You can reach us in a few ways:<ul>
           <li><a href="http://www.asteriskinfosec.com.au/">www.asteriskinfosec.com.au</a></li>
-          <li><a href="http://labs.ateriskinfosec.com.au/">labs.asteriskinfosec.com.au</a></li>
+          <li><a href="http://labs.asteriskinfosec.com.au/">labs.asteriskinfosec.com.au</a></li>
           <li><a href="https://twitter.com/asteriskinfosec">@asteriskinfosec</a></li>
         </ul></p>
       </div>
