Added link to SSA

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <p>The <a href="https://github.com/AsteriskLabs/ssa">SAMM Self Assessment</a> web application is a simplified checklist app that's meant to help simplify the collection of information for a light-weight <a href="http://www.opensamm.org">OpenSAMM</a> assessment. The OWASP Project has been exceptionally useful in a number of engagements we've had, and has enabled the ability for people to quickly gauge their status, particularly against documented target states, can be tremendously useful.</p>
 
-<p>Status: Beta - but .. not too far to go. You can see our current list of <a href="https://github.com/AsteriskLabs/ssa/issues">issues</a> to keep track</p>
+<p>Status: (Forever) Beta - <a href="https://ssa.asteriskinfosec.com.au/">ssa.asteriskinfosec.com.au</a>. You can see our current list of <a href="https://github.com/AsteriskLabs/ssa/issues">issues</a> to keep track</p>
 
 <h4>Simple Strides</h4>
 
