Updated to include link to Prenus rubygems page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <p><a href="http://labs.asteriskinfosec.com.au/tag/prenus/">Blog entries here</a></p>
 
-<p>Status: We use it sure.</p>
+<p>Status: We use it sure. (and apparently a bunch of other people too?? - see <a href="https://rubygems.org/gems/prenus">rubygems</a>)</p>
 
 
 
